--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -54,7 +54,9 @@
         </TabItem>
         <TabItem Header="Все товары" FontSize="16">
             <Grid>
-                <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="10">
+                <Label Content="Поиск" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="10,4,0,0"/>
+                <TextBox Text="{Binding Path=SearchText, UpdateSourceTrigger=PropertyChanged}" HorizontalAlignment="Stretch" VerticalAlignment="Top" Height="28" Margin="70,10,10,0"/>
+                <ScrollViewer VerticalScrollBarVisibility="Auto" Margin="10,43,10,10">
                     <WrapPanel Name="AllProductsWrap"  VerticalAlignment="Stretch" HorizontalAlignment="Stretch"/>
                 </ScrollViewer>
             </Grid>
